# rust-minecraft

./: Cargo.toml
src/: main.rs
src/protocol/: errors.rs  mod.rs  packet.rs  read.rs  write.rs
src/protocol/connection/: minecraft_connection.rs  mod.rs  proxied_connection.rs  user_connection.rs
src/protocol/packets/: handshake.rs  login_start.rs  login_success.rs  mod.rs  ping_pong.rs  serverlist_ping.rs  set_compression.rs
