[package]
name = "minecraft_proxy"
version = "0.1.0"
authors = ["Justin Guckes <justin.guckes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1", features = ["i128"] }
error-chain = "0.12"
